# SkyPro_HW_Skripnikov

./: .env.example  .gitignore  README.md  main.py  mylog.txt  pyproject.toml
data/: transactions_excel.xlsx
htmlcov/: index.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  read_tables.py  utils.py  widget.py
tests/: conftest.py  test_generators.py  test_log.py  test_masks.py  test_processing.py  test_read_tables.py  test_utils.py  test_widget.py
